--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -129,18 +129,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "f_http = \"C:/Users/Bin/Desktop/Thesis/dataset/http.csv\""
+    "f_http = \"C:/Users/Bin/Desktop/Thesis/dataset/http__.csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -151,16 +151,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(623091, 35)"
+       "(613142, 36)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,6 +435,92 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\ProgramData\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "foo = http.iloc[:,-1]\n",
+    "foo[foo!=\"normal\"] = \"anomaly\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1c045408668>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXwAAAD8CAYAAAB0IB+mAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAG1VJREFUeJzt3X+wHWV9x/H3NzckNQEEkqCQIEkw\nWOOPKXgHsSqiYk1ChU61Doxaq9RMW7G1WqY4KDK006k6HTu2CE2VQRkRglbNaCyK4o8qCbnhRyAJ\nMZeQkEt+EfI75Af35ts/zt7k3HPPuWfP7nPO7tn9vGYyOWfvnt3vPs+e73n22Wd3zd0REZHiG5d1\nACIi0hlK+CIiJaGELyJSEkr4IiIloYQvIlISSvgiIiWhhC8iUhJK+CIiJaGELyJSEuOzWvHUqVN9\n5syZWa1eRKQrrVy5cqe7T0vy2cwS/syZM+nr68tq9SIiXcnMNiX9rLp0RERKQglfRKQklPBFREpC\nCV9EpCSU8EVESqJpwjez281sh5k90eDvZmZfMbN+M1tlZheGD1NERNKK08K/A5g3xt/nA3OifwuB\nW9OHJSIioTVN+O7+K2DXGLNcCXzTK5YBp5nZWc2W+/yBo/GjlFiGjjmLV2xmcOhY6mX9/MntbN17\nKEBU+bN17yF+/uR2APYdfpF/WbqWxzbvYcNzB7jlgX72HnoRgHv7NrNj/+Exl/Xc/iP87xPbgsW2\nctMunty2r+XPuTuf+/4TrNy0O1gsw360ait7Xkj/fX1x6Bi3/9/TTcu0EXfnnhXPsOtgJZYfrtrC\nnheOsm3vYe5fs/34fGu27OPhZ3bz0zXb2bHvxLqODh7jG7/dyOIVm3nquQPseeEoNy1ZTd/GXQwO\nHWPxis0MHRv9yNeNOw/yg0efTRRz3oS48Go6sLnq/UA0bWvtjGa2kMpRAJPOOi/AqqXaXcs38bkf\nrGb/kUGuecusVMv66B19TDtlIituuCxQdPnxnv/4DTsPHGHjv17Odfc+xn2rt7PoVxu4/HVn8aPH\ntzLj9Jdw8ewpXPedVSx43cv56gfe0HBZH/r6cp7ctp81N7+bSRPSf53ee+uDAGz818tb+tyDG57n\nzmWbuHPZppY/O5atew/x8bse5uLZZ3D3wjelWtaKp3dx8w/XsG7bfr7wvte3/Pn1Ow7wj999nJWb\ndvOJd8zh2rse4a1zprLhuYM8u+fQ8e1e8JVfH//MzCmT+MV1bwcqjZjPL1kNwOypk3nTeVP41vJn\nuOO3G/ns5a/mn3+0liNDx/jQxeeOWO8nvv0Ijz+7l/e8/mzGjbOkm58LIU7a1iuBuk9Gd/dF7t7r\n7r3jezK7yLewdr9QaZmGaI1BpfVaRDsPnNiurXtPtAD3HxkEKkdKRwcrR0mrBvaOuazNu14AoE7D\nsKMOHB5sy3KHy2HLnmSt8hHLio48t+5LtqxDR4cAeHLbfo4MDkVxHeLZPY2PRJ+J6gdgf1UZbdh5\nkPXbDxx/vzv6zuyt8915/Nmx94FuEiLhDwDnVL2fAWwJsFwREQkoRMJfAvx5NFrnYmCvu4/qzhER\nkWw17Vcxs28DlwJTzWwA+DxwEoC73wYsBRYA/cALwEfaFayIiCTXNOG7+9VN/u7Ax4NFJCIibZHZ\nlbZe/7yuSObcK/8kn7KqmyLsErq1gohISSjhi9Rh3T3cutBUN8kp4ReQuiM6z1XomWhW6q3WStGr\nUQm/QNTwaV3aMrOcNDfbHUf+zrmF3V4rybdHCV9EGipLIiwLJXwRkZJQwhepkbfOC8mHIpynUcIX\nESkJJXwRkZJQwhcRKQklfBGRklDCL6D8jZkuPpV4RpoUfKvnWYtej0r4IjXcvfBXXLYqT+Whm6cl\np4RfIDm56LO7pCy0vBR5XuLolND7elm+O0r4InWUJQE0k8dyyGNM3UIJX0SkJJTwRURKQglfRKQk\nlPBFREpCCV+khpOvYYgyUmbDMguwTyjhi4iUhBJ+ARWhJZK1Vof+qcw7p7puqos9xO2Li16PSvgF\nkpfH7XWT1CWWkyJvd9XnLRGG3tycVGPbKeGLiJSEEr6ISEko4YuIlIQSvkgtz1+ftZyQ3d0yu3+n\nUMIXESkJJXyROjTgKb9UN8nFSvhmNs/M1plZv5ldX+fvrzCzB8zsETNbZWYLwocqIiJpNE34ZtYD\n3ALMB+YCV5vZ3JrZPgssdvcLgKuAr4YOVOLr/p7GLqRCz0T1xVYh+vaL0E8/ljgt/IuAfnff4O5H\ngbuBK2vmceDU6PVLgS3hQhRpn7TdA3npXShbN0fwiwxLUoDjY8wzHdhc9X4AeGPNPDcBPzGzTwCT\ngcuCRCeSAUfPtM0z3TwtuTgt/Ho/fbWbfjVwh7vPABYAd5rZqGWb2UIz6zOzvsGhodajFZGuNZw0\nQtzzJs36T7wvQAZvUZyEPwCcU/V+BqO7bK4BFgO4+4PA7wFTaxfk7ovcvdfde8f39CSLWEREEomT\n8FcAc8xslplNoHJSdknNPM8A7wQws1dTSfjPhQxUpJNK0qXbUcNFmrb/PenHaz9muTkD0zlNE767\nDwLXAvcBa6mMxlltZjeb2RXRbJ8GPmZmjwHfBv7CszpuExGRuuKctMXdlwJLa6bdWPV6DfDmsKGJ\niEhIutJWRKQklPBFarhunpZrqpvkMkv4qrP20Rei88o4xC8PvMHrxMsreDWqhV8gGlnSukZFFrcs\n8/JYyTKNODHTIw6TUsIvkKK3TtohbZHlZTBa2Y4wQm9tWUpPCb+ActLoLJWitrDzvi8Fb+nnfHvT\nUsIXESkJJXyRGo66x/JMN09LTglfJFLvaL7oh/jdRHWRXnYJvwC/llIs9XbJIrTqikJ1kZ5a+CJ1\nqDWZX6qb5JTwC0gtoc4r27DIvBhx4VWAHb/o3x0l/AJRy6d1aYtMF15lQxdeJaOELyJSEkr4IjV0\n87TR8nJFMWQ4LLMA3XZK+CIRDcscLS9dVqC6CEEJXySiYZn5prpITwlfpA61JvNLdZOcEr6ISEko\n4YuIlIQSfgEVYTRBlhxvub9Y/cudU13WI16HWHbM9XYrJXwRkZJQwi+Qsl1tGUL1sMMkwzJzcwIx\nL3G0UXVZhy733NRjmynhi0Q0LDPfVBfpKeGL1FGWFl9cecq1qpvklPBFpCHl1mJRwhcRKQklfJEa\nunlavmV387Tup4QvEtHN0/JNdZGeEr5IRKN02mu4KJPeajltXdR+vIwXKCrhF1H59uPMqcizUZ20\ng/w4F/wXPlbCN7N5ZrbOzPrN7PoG87zfzNaY2WozuytsmBKHDnlb16jI4pZlXoo8L3GMZTjGtPfY\nNxt5kWHSuhqxjK4owfTGN5vBzHqAW4B3AQPACjNb4u5rquaZA3wGeLO77zazM9sVsIiIJBOnhX8R\n0O/uG9z9KHA3cGXNPB8DbnH33QDuviNsmCIiklachD8d2Fz1fiCaVu184Hwz+42ZLTOzefUWZGYL\nzazPzPqGhoaSRSzSZk7hu3K7WmbDMguwU8RJ+PU6t2q3fDwwB7gUuBr4mpmdNupD7ovcvdfde3t6\nelqNVaStNCwz31QX6cVJ+APAOVXvZwBb6szzA3d/0d2fBtZR+QFoqPt/K6Xb1bbYNCyzvTQsM3tx\nEv4KYI6ZzTKzCcBVwJKaeb4PvB3AzKZS6eLZEDJQERFJp2nCd/dB4FrgPmAtsNjdV5vZzWZ2RTTb\nfcDzZrYGeAC4zt2fb1fQIu2m7oPwQg7LTLP+E+/LV8lNh2UCuPtSYGnNtBurXjvwqeifZKx8B6rZ\nK8IJvW408hGH6eug6LWoK20LpHztlfTqthY9/jNt07ZWQ8lLHJ3gXvP0qwDLjFN8RfgxUMIXiWiU\nTr6pLtJTwhcRKQklfJGIhmU2FqIc0i5CdZGeEr5IHeo+yC/VTXJK+CLSkJJrsSjhi4iUhBK+lFaj\nPmHdPC3fsrt5WjbrDUkJXySiYZn5prpITwm/gHTVZ+epxLMx4krbECOJCl6RSvgFohZQ66rvp5Jk\nWGZeijwvcYwp7d0uG3w+xFXGXVF+ASjhi9ShH8/8Ut0kp4QvIlISSvgFUvT+x3aod4dF9/hlmZci\nb3cceXpYSG3dhDhnFWsJ+SmCxJTwRURKQgm/gMp0q9yQ0gzLLGqJ5+khIfXqIvSuXvSvjhK+iEhJ\nKOGLRHS3zPZKex5AdZGeEn4B6cKrzlOJd051t0voXb3oXx0l/AIpev9jaE76Puq8FHle4siCLryK\nTwlfpIa752oYooyU2c3TCrBPKOGLRHTztHxTXaSnhC8iUhJK+CIRjdJpLOSdKJMOKkgbQ+3Hi9BF\n0yolfBFpSN0oxaKELyIdlXZUTdKP134sT1cRd4oSvkgNPeIw3/SIw+SU8AuoCDtmt1GZZy/IeYaC\n9+sr4YtENCwz31QX6SnhF0gZ+yRTS1lkeUlCeYmjU6q3N8Sml6X8YiV8M5tnZuvMrN/Mrh9jvveZ\nmZtZb9OFFvvISbqQhmW2l4ZlZq9pwjezHuAWYD4wF7jazObWme8U4G+B5aGDFGkH3WROyiZOC/8i\noN/dN7j7UeBu4Mo68/0T8EXgcMD4RKRgNCwzO3ES/nRgc9X7gWjacWZ2AXCOu/8wYGwimXBXj2Oe\nZXfztO4XJ+HX+xk8vu1mNg74MvDppgsyW2hmfWbWN3RsKH6UIh2gUTr5prpIL07CHwDOqXo/A9hS\n9f4U4LXAL8xsI3AxsKTeiVt3X+Tuve7e2zOuJ3nUIiLSsjgJfwUwx8xmmdkE4CpgyfAf3X2vu091\n95nuPhNYBlzh7n1tiVhERBJpmvDdfRC4FrgPWAssdvfVZnazmV2RdMVlHBLVKSrZZNIMy9T+3Fza\nEqpXF9UjrULUQdEHbo2PM5O7LwWW1ky7scG8l6YPS5JQH2frivJwvDKNODEbOdInxH4f4jGJ3UBX\n2orUqNw8reBNvS6W3c3Tun+fUMIXESkJJXyRiIZl5pvqIj0lfCmt7j9AF2mNEr6INKUfx2JQwheJ\n6G6Zo4XsRUl70rPsdRGCEr6IdBX15SenhF9Aqe8bXvKmlHuCS3jKXWQdVb17eoPpiZed8G/dQglf\nRKQklPCl1Jo9Kq9Z90FeuhfyEkc7NaqrMl1lnJYSvohISSjhi4iUhBK+SETDMturHXfLlNYo4YtI\nVynD+Yp2UcIXqUOtyZHyVB7Z3S0zm/WGpIQvpVX7BdbN0+rI0faXvi4CUMIvID19qfNU4tlodBFW\niOUVkRK+iEhJKOEXSFke0xZS9UU7SUbp5KXE8xLHWIbLMumtO6o/ZiOvvIr3+VHvT0wpy1dHCV9E\npCSU8EVqVFqSBe/MzVBWR6K1a231lgxFODemhC8iUhJK+CIRDcvMN9VFekr4BVL2+9gnkfYwPS8l\n3v448rKlFSN29RD3wc/X5rWNEr6ISEko4ReQ7g+eTJqbpxW1xMPuS5XCDDEsc1gr3TxjDctMsrxu\npIRfQEUYTdAJIctJJZ6NEVfaBuiXKXrXjhJ+gejCq9bVa8E63nUt+7zEEUeI/TTJhVdjDcuMFVIB\nfgyU8EUiGqWTb6qL9JTwZZSiH9aKlJUSvohIScRK+GY2z8zWmVm/mV1f5++fMrM1ZrbKzH5mZueG\nD1VERNJomvDNrAe4BZgPzAWuNrO5NbM9AvS6++uB7wBfDB2oSLvpmbbtFfJumYk+P+p9+So3Tgv/\nIqDf3Te4+1HgbuDK6hnc/QF3fyF6uwyYETZMkc5xL8SAjCD8+Nj5jAPJgSIUQZyEPx3YXPV+IJrW\nyDXAj+v9wcwWmlmfmfUdO3YsfpQiUhjderfMIoiT8OuVSt0fOzP7INALfKne3919kbv3unvvuHE6\nX9wuao0lk2ZYZlHLfDgp5mFIZL0YqrtlgjzisBDt+MbGx5hnADin6v0MYEvtTGZ2GXAD8DZ3PxIm\nPBERCSVOM3sFMMfMZpnZBOAqYEn1DGZ2AfBfwBXuviN8mBJHDhphXSdtyzUPLV+gdJU/4irZwMsr\nsqYJ390HgWuB+4C1wGJ3X21mN5vZFdFsXwJOBu41s0fNbEmDxYnkRlG7YUQaidOlg7svBZbWTLux\n6vVlra5Y3zXJGw3LbK+0Ram6SE9nTkVqOEouMloR9gklfJGIbp4mRaeELyJSEkr4ItJUEbozRAlf\nRKQ0lPBFAijqFZp5P4cx8hGHIRYYYBk5poRfIHn/cuZRdZkNf9crN0+Ld9OwvFywk5c4xhLybpfV\n9RZiv4+zjCL8qCvhi4iUhBK+SETDMqXolPBFREpCCV9EpCSU8GWU7j81JSL1KOGLRHTztPY6MfIp\n6TNt01WGnmmrhC8yiuNK9DVUHMX48VfCL6C0LSFpnYo8vpDPtPWGb+qsd9T70XEUvRqV8EUiGpYp\nRaeEXyDKTa1Le4VqXn4Q8hJHp9iI1+k3vizFp4QvIlISSvgiIiWRXcIv+tkR6Toaltlew2WZeFhm\n2vWPel++ylULX6SGuxK9jFaEXUIJX0qrNqlrlE5nhByW2dJ6R70vX+Uq4YuIlIQSfgEV4dCz2xS9\nzPN6Md+IJ14FqIW8bmcoSvgiIiWhhF8gWfWNdrO0RZaXEs9LHB2TwSMOi0AJXyTiI17He6atxHfi\nmcFJ75Y5vJwwwzpbXU4RunuU8EVESkIJXySiYZmdkbbrMelwSg3LVMIXESmNWAnfzOaZ2Toz6zez\n6+v8faKZ3RP9fbmZzQwdqIiIpNM04ZtZD3ALMB+YC1xtZnNrZrsG2O3urwS+DHwhdKAiIpJOnBb+\nRUC/u29w96PA3cCVNfNcCXwjev0d4J2mMYIiIrlizYYamdn7gHnu/pfR+w8Bb3T3a6vmeSKaZyB6\n/1Q0z85Gy5141hy/5LqvBdgEGbZ+x4Hjr+eceXLi5TjQHy0rzXLyariczps2maeeO3h8+oTx4zg6\neIwpkycwaWIPm3cdAsYug+FlveKMSUwcn/6U2PqE5b5932H2HR5M9NmxDB1zNuw8GGS5+w8Psm3f\n4cTLOvTiEAO7K3Uya+pknt55cMTfZ0+dTM84G/E9qF7X8wePsuvg0abrqY1teHkzp0zipJ7sT3ve\n/+lLV7p7b5LPjo8xT72Weu2vRJx5MLOFwEKAU8+ezZyXFS+ZZOncKZO5f+12Ljl/GidP7Em1rP4d\nB5g9bXIh68gMfrf9AK96+SlMOXkiDz29C4DLXn0mKzft5g3nng7A5l2HuGjWGUw9eULDZb1kQg+r\nBvby2umnBomt/7kDvOSknpbL/ZVnnsyPn9gGELzONuw8yGvOPpVzp0xKvaylj2/jXXNfxkk9yToA\nBnYf4g/Pm8Jpk07i6Z0Hee30Uxk6Bmu37uP3zzoFgOcOHGHPCy8ClR/14fKYE60f4FUvO4UzT53I\nr9dX2qSXvfpM7l+7g7edP43JNd+dSRPH89jmPcw9O0wdp3V/is/GSfgDwDlV72cAWxrMM2Bm44GX\nArtqF+Tui4BFAL29vf7VD7whScwiIqV16weTfzbO8ckKYI6ZzTKzCcBVwJKaeZYAH45evw/4uRfh\nsjQRkQJp2sJ390Ezuxa4D+gBbnf31WZ2M9Dn7kuArwN3mlk/lZb9Ve0MWkREWhenSwd3XwosrZl2\nY9Xrw8CfhQ1NRERCyv6Us4iIdIQSvohISSjhi4iUhBK+iEhJKOGLiJRE01srtG3FZvuBdZmsPL6p\nQMPbQ+SEYgxDMYahGMMYK8Zz3X1akoXGGpbZJuuS3g+iU8ysTzGmpxjDUIxhlDlGdemIiJSEEr6I\nSElkmfAXZbjuuBRjGIoxDMUYRmljzOykrYiIdJa6dERESiKThN/soehtXO85ZvaAma01s9Vm9nfR\n9JvM7FkzezT6t6DqM5+J4lxnZu/uxDaY2UYzezyKpS+adoaZ/dTM1kf/nx5NNzP7ShTHKjO7sGo5\nH47mX29mH260vgTxvaqqrB41s31m9smsy9HMbjezHdET2IanBSs3M3tDVC/90WdbfopHgxi/ZGZP\nRnF8z8xOi6bPNLNDVeV5W7NYGm1vgBiD1a1VbrW+PIrxHqvcdj1EjPdUxbfRzB6NpmdVjo3yTXb7\npLt39B+VWyw/BcwGJgCPAXM7tO6zgAuj16cAv6PyYPabgH+oM//cKL6JwKwo7p52bwOwEZhaM+2L\nwPXR6+uBL0SvFwA/pvLUsYuB5dH0M4AN0f+nR69Pb1N9bgPOzbocgUuAC4En2lFuwEPAm6LP/BiY\nHyjGPwLGR6+/UBXjzOr5apZTN5ZG2xsgxmB1CywGrope3wb8dYgYa/7+b8CNGZdjo3yT2T6ZRQs/\nzkPR28Ldt7r7w9Hr/cBaYPoYH7kSuNvdj7j700A/lfiz2IbqB8V/A/iTqunf9IplwGlmdhbwbuCn\n7r7L3XcDPwXmtSGudwJPufumJrG3vRzd/VeMftJakHKL/naquz/olW/aN6uWlSpGd/+Juw9Gb5dR\neapcQ01iabS9qWIcQ0t1G7VA3wF8p10xRut4P/DtsZbRgXJslG8y2yezSPjTgc1V7wcYO+m2hZnN\nBC4AlkeTro0Oo26vOnxrFGu7t8GBn5jZSqs8BxjgZe6+FSo7EnBmxjEOu4qRX6w8lSOEK7fp0et2\nxgrwUSottWGzzOwRM/ulmb01mjZWLI22N4QQdTsF2FP1A9eOcnwrsN3d11dNy7Qca/JNZvtkFgk/\n1gPP2xqA2cnAd4FPuvs+4FbgPOAPgK1UDgehcazt3oY3u/uFwHzg42Z2yRjzZhUjUd/rFcC90aS8\nleNYWo2pE+V5AzAIfCuatBV4hbtfAHwKuMvMTu1ELHWEqttOxH41IxshmZZjnXzTcNYG8QQryywS\nfpyHoreNmZ1EpfC/5e7/A+Du2919yN2PAf9N5XB0rFjbug3uviX6fwfwvSie7dEh3PCh6I4sY4zM\nBx529+1RvLkqx0iochtgZFdL0FijE3F/DHwgOjwn6iZ5Pnq9kkqf+PlNYmm0vakErNudVLoqxtdM\nDyJa7p8C91TFnlk51ss3Yyy7/ftkqyci0v6jcv+eDVRO8AyfzHlNh9ZtVPq5/r1m+llVr/+eSp8k\nwGsYeUJqA5WTUW3bBmAycErV699S6Xv/EiNP9Hwxen05I0/0POQnTvQ8TeUkz+nR6zMCl+fdwEfy\nVI7UnKALWW7Aimje4RNkCwLFOA9YA0yrmW8a0BO9ng082yyWRtsbIMZgdUvliLD6pO3fhIixqix/\nmYdypHG+yWyfDPblb7EgFlA5Y/0UcEMH1/sWKoc8q4BHo38LgDuBx6PpS2p27huiONdRdQa8XdsQ\n7ZCPRf9WDy+bSt/nz4D10f/DFW7ALVEcjwO9Vcv6KJWTaP1UJeZAcU4CngdeWjUt03Kkchi/FXiR\nSuvnmpDlBvQCT0Sf+U+iCxcDxNhPpY92eJ+8LZr3vdE+8BjwMPCeZrE02t4AMQar22gffyja7nuB\niSFijKbfAfxVzbxZlWOjfJPZPqkrbUVESkJX2oqIlIQSvohISSjhi4iUhBK+iEhJKOGLiJSEEr6I\nSEko4YuIlIQSvohISfw/5a+T5tUvuegAAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1c045402198>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "label = http.iloc[:,-1]\n",
+    "buffer = [label[i*30:(i+1)*30] for i in range(0,label.size//30)]\n",
+    "tmp = []\n",
+    "for buf in buffer:\n",
+    "    if \"anomaly\" in buf.tolist():\n",
+    "        #print(\"anomaly\")\n",
+    "        tmp.append(1)\n",
+    "    else:\n",
+    "        #print(\"normal\")\n",
+    "        tmp.append(0)\n",
+    "pd.Series(tmp).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "pd.concat((http[10000:],http[:10000]),axis=0).to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/http__.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "tmp = http.shape[0]//6\n",
+    "for i in range(6):\n",
+    "    http[tmp*i:tmp*(i+1)].to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/http/http\"+str(i)+\".csv\",header=None,index=None)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -443,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -454,8 +540,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "smtp = pd.read_csv(f_smtp)"
@@ -463,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +560,7 @@
        "(1183, 35)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
