--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -147,6 +147,89 @@
    ],
    "source": [
     "http.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "anomaly RangeIndex(start=158256, stop=158340, step=1)\n",
+      "anomaly RangeIndex(start=191688, stop=191772, step=1)\n",
+      "anomaly RangeIndex(start=293244, stop=293328, step=1)\n",
+      "anomaly RangeIndex(start=298956, stop=299040, step=1)\n",
+      "anomaly RangeIndex(start=300216, stop=300300, step=1)\n",
+      "anomaly RangeIndex(start=303996, stop=304080, step=1)\n",
+      "anomaly RangeIndex(start=304080, stop=304164, step=1)\n",
+      "anomaly RangeIndex(start=304164, stop=304248, step=1)\n",
+      "anomaly RangeIndex(start=304248, stop=304332, step=1)\n",
+      "anomaly RangeIndex(start=304332, stop=304416, step=1)\n",
+      "anomaly RangeIndex(start=304416, stop=304500, step=1)\n",
+      "anomaly RangeIndex(start=304500, stop=304584, step=1)\n",
+      "anomaly RangeIndex(start=304584, stop=304668, step=1)\n",
+      "anomaly RangeIndex(start=304668, stop=304752, step=1)\n",
+      "anomaly RangeIndex(start=304752, stop=304836, step=1)\n",
+      "anomaly RangeIndex(start=304836, stop=304920, step=1)\n",
+      "anomaly RangeIndex(start=304920, stop=305004, step=1)\n",
+      "anomaly RangeIndex(start=305004, stop=305088, step=1)\n",
+      "anomaly RangeIndex(start=310380, stop=310464, step=1)\n",
+      "anomaly RangeIndex(start=310464, stop=310548, step=1)\n",
+      "anomaly RangeIndex(start=310548, stop=310632, step=1)\n",
+      "anomaly RangeIndex(start=328104, stop=328188, step=1)\n",
+      "anomaly RangeIndex(start=364140, stop=364224, step=1)\n",
+      "anomaly RangeIndex(start=391020, stop=391104, step=1)\n",
+      "anomaly RangeIndex(start=391692, stop=391776, step=1)\n",
+      "anomaly RangeIndex(start=431424, stop=431508, step=1)\n",
+      "anomaly RangeIndex(start=465780, stop=465864, step=1)\n",
+      "anomaly RangeIndex(start=465864, stop=465948, step=1)\n",
+      "anomaly RangeIndex(start=465948, stop=466032, step=1)\n",
+      "anomaly RangeIndex(start=466032, stop=466116, step=1)\n",
+      "anomaly RangeIndex(start=466116, stop=466200, step=1)\n",
+      "anomaly RangeIndex(start=466200, stop=466284, step=1)\n",
+      "anomaly RangeIndex(start=466284, stop=466368, step=1)\n",
+      "anomaly RangeIndex(start=495264, stop=495348, step=1)\n",
+      "anomaly RangeIndex(start=495348, stop=495432, step=1)\n",
+      "anomaly RangeIndex(start=495432, stop=495516, step=1)\n",
+      "anomaly RangeIndex(start=495516, stop=495600, step=1)\n",
+      "anomaly RangeIndex(start=500976, stop=501060, step=1)\n",
+      "anomaly RangeIndex(start=505680, stop=505764, step=1)\n",
+      "anomaly RangeIndex(start=512652, stop=512736, step=1)\n",
+      "anomaly RangeIndex(start=515760, stop=515844, step=1)\n",
+      "anomaly RangeIndex(start=524328, stop=524412, step=1)\n",
+      "anomaly RangeIndex(start=524412, stop=524496, step=1)\n",
+      "anomaly RangeIndex(start=524496, stop=524580, step=1)\n",
+      "anomaly RangeIndex(start=524580, stop=524664, step=1)\n",
+      "anomaly RangeIndex(start=524664, stop=524748, step=1)\n",
+      "anomaly RangeIndex(start=524748, stop=524832, step=1)\n",
+      "anomaly RangeIndex(start=526764, stop=526848, step=1)\n",
+      "anomaly RangeIndex(start=526848, stop=526932, step=1)\n",
+      "anomaly RangeIndex(start=526932, stop=527016, step=1)\n",
+      "anomaly RangeIndex(start=531384, stop=531468, step=1)\n",
+      "anomaly RangeIndex(start=531468, stop=531552, step=1)\n",
+      "anomaly RangeIndex(start=531552, stop=531636, step=1)\n",
+      "anomaly RangeIndex(start=531636, stop=531720, step=1)\n",
+      "anomaly RangeIndex(start=532812, stop=532896, step=1)\n",
+      "anomaly RangeIndex(start=537264, stop=537348, step=1)\n",
+      "anomaly RangeIndex(start=549444, stop=549528, step=1)\n",
+      "anomaly RangeIndex(start=549528, stop=549612, step=1)\n",
+      "anomaly RangeIndex(start=549612, stop=549696, step=1)\n",
+      "anomaly RangeIndex(start=549696, stop=549780, step=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "label = http.iloc[:,-1]\n",
+    "buffer = [label[i*84:(i+1)*84] for i in range(0,label.size//84)]\n",
+    "for buf in buffer:\n",
+    "    if \"anomaly\" in buf.tolist():\n",
+    "        print(\"anomaly\",buf.index)\n",
+    "    else:\n",
+    "        pass"
    ]
   },
   {
