--- a/Thesis/content/4_proposedmodel.tex
+++ b/Thesis/content/4_proposedmodel.tex
@@ -16,7 +16,7 @@ The proposed model is a full flow from data stream generation, anomaly detection
 
 \begin{algorithm}[h]
 \SetKwInOut{Input}{input}
-\Input{performanceThreshold \tau, retrainDataSize \M}
+\Input{performanceThreshold $\tau$, retrainDataSize M}
 
 \BlankLine 
 needRetraining = False\;
