--- a/src/Experiments/Online_http.ipynb
+++ b/src/Experiments/Online_http.ipynb
@@ -44,9 +44,9 @@
     "init_wins = 1000\n",
     "\n",
     "names = [str(x) for x in range(elem_num)] +[\"label\"]\n",
-    "smtp = pd.read_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/http.csv\",names=names,skiprows=step_num*init_wins)\n",
-    "wins = smtp.shape[0]//step_num\n",
-    "test_set = smtp.iloc[:wins*batch_num*step_num,:-1]\n",
+    "http = pd.read_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/http.csv\",names=names,skiprows=step_num*init_wins)\n",
+    "wins = http.shape[0]//step_num\n",
+    "test_set = http.iloc[:wins*batch_num*step_num,:-1]\n",
     "labels =smtp.iloc[:wins*batch_num*step_num,-1]\n",
     "\n",
     "ts = test_set.as_matrix().reshape(wins,batch_num,step_num,elem_num)\n",
@@ -72,7 +72,7 @@
    },
    "outputs": [],
    "source": [
-    "del smtp\n",
+    "del http\n",
     "del test_set"
    ]
   },
