--- a/src/DataPreparation/Dataset description.ipynb
+++ b/src/DataPreparation/Dataset description.ipynb
@@ -163,7 +163,9 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "\n",
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -700,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -711,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -720,13 +722,23 @@
        "(581012, 8)"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "forest.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "forest[:300000].to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest_1.csv\",header=None,index=None)\n",
+    "forest[300000:].to_csv(\"C:/Users/Bin/Desktop/Thesis/dataset/forest_2.csv\",header=None,index=None)"
    ]
   },
   {
